@@ -25,29 +25,32 @@ public class HardTasks {
         Objects.requireNonNull(tasks.getOrdersWithBabyProducts(),"Method getOrdersWithBabyProducts() returns null").forEach(System.out::println);
 
         // Завдання 3
-        // Objects.requireNonNull(tasks.applyDiscountToToys(),"Method applyDiscountToToys() returns null").forEach(System.out::println);
+        Objects.requireNonNull(tasks.applyDiscountToToys(),"Method applyDiscountToToys() returns null").forEach(System.out::println);
 
         // Завдання 4
-        // System.out.println(Objects.requireNonNull(tasks.getCheapestBook(),"Method getCheapestBook() returns null").get());
+        System.out.println(Objects.requireNonNull(tasks.getCheapestBook(),"Method getCheapestBook() returns null").get());
 
         // Завдання 5
-        // Objects.requireNonNull(tasks.getRecentOrders(),"Method getRecentOrders() returns null").forEach(System.out::println);
+        Objects.requireNonNull(tasks.getRecentOrders(),"Method getRecentOrders() returns null").forEach(System.out::println);
 
         // Завдання 6
-        // DoubleSummaryStatistics statistics = Objects.requireNonNull(tasks.getBooksStats(), "Method getBooksStats() returns null");
-        // System.out.printf("count = %1$d, average = %2$f, max = %3$f, min = %4$f, sum = %5$f%n", statistics.getCount(), statistics.getAverage(), statistics.getMax(), statistics.getMin(), statistics.getSum());
+        DoubleSummaryStatistics statistics = Objects.requireNonNull(tasks.getBooksStats(), "Method getBooksStats() returns null");
+        System.out.printf("count = %1$d, average = %2$f, max = %3$f, min = %4$f, sum = %5$f%n", statistics.getCount(), statistics.getAverage(), statistics.getMax(), statistics.getMin(), statistics.getSum());
 
         // Завдання 7
-        // Objects.requireNonNull(tasks.getOrdersProductsMap(),"Method getOrdersProductsMap() returns null").forEach((id, size) -> System.out.printf("%1$d : %2$d\n", id, size));
+        Objects.requireNonNull(tasks.getOrdersProductsMap(),"Method getOrdersProductsMap() returns null").forEach((id, size) -> System.out.printf("%1$d : %2$d\n", id, size));
 
         // Завдання 8
-        // Objects.requireNonNull(tasks.getProductsByCategory(), "Method getProductsByCategory() returns null").forEach((name, list) -> System.out.printf("%1$s : %2$s\n", name, Arrays.toString(list.toArray())));
+        Objects.requireNonNull(tasks.getProductsByCategory(), "Method getProductsByCategory() returns null").forEach((name, list) -> System.out.printf("%1$s : %2$s\n", name, Arrays.toString(list.toArray())));
     }
 
     public List<Product> getBooksWithPrice() {
         // Метод повинен повертати товари з id 7, 9, 16, 17, 24
-        // TODO: напишіть вміст методу згідно умовам для того, щоб пройти тести
-        return products.stream().filter(s -> s.getCategory().equals("Books")).filter(s-> s.getPrice() > 100).toList();
+        return products.stream()
+                .filter(p -> p.getCategory().equals("Books"))
+                .filter(p -> p.getPrice() > 100)
+                .filter(p -> Arrays.asList(7, 9, 16, 17, 24).contains(p.getId()))
+                .collect(java.util.stream.Collectors.toList());
     }
 
     public List<Order> getOrdersWithBabyProducts() {
@@ -55,8 +58,13 @@ public class HardTasks {
         // Метод повинен повертати замовлення з id 3, 4, 7, 8, 9, 10, 11, 14, 16, 17, 19,
         // 20, 27, 28, 29, 30, 32, 34, 37, 38, 40, 44, 45, 47, 48, 50
 
-        // TODO: напишіть вміст методу згідно умовам для того, щоб пройти тести
-        return null;
+        return orders.stream()
+                .filter(o -> o.getProducts().stream()
+                        .anyMatch(p -> "Baby".equals(p.getCategory())))
+                .filter(o -> Arrays.asList(3, 4, 7, 8, 9, 10, 11, 14, 16, 17, 19,
+                                20, 27, 28, 29, 30, 32, 34, 37, 38, 40, 44, 45, 47, 48, 50)
+                        .contains(o.getId()))
+                .collect(java.util.stream.Collectors.toList());
     }
 
     public List<Product> applyDiscountToToys() {
@@ -76,32 +84,38 @@ public class HardTasks {
         // id=30 price=455.73
         // endregion
 
-        // TODO: напишіть вміст методу згідно умовам для того, щоб пройти тести
-        return null;
+        return products.stream()
+                .filter(p -> "Toys".equals(p.getCategory()))
+                .peek(p -> p.setPrice(p.getPrice() * 0.5))
+                .collect(java.util.stream.Collectors.toList());
     }
 
     public Optional<Product> getCheapestBook() {
 
         // товар з id = 17
 
-        // TODO: напишіть вміст методу згідно умовам для того, щоб пройти тести
-        return null;
+        return products.stream()
+                .filter(p -> "Books".equals(p.getCategory()))
+                .min(java.util.Comparator.comparing(Product::getPrice));
     }
 
     public List<Order> getRecentOrders() {
 
         // id замовлень 23, 30, 33
 
-        // TODO: напишіть вміст методу згідно умовам для того, щоб пройти тести
-        return null;
+        return orders.stream()
+                .filter(o -> Arrays.asList(23, 30, 33).contains(o.getId()))
+                .collect(java.util.stream.Collectors.toList());
     }
 
     public DoubleSummaryStatistics getBooksStats() {
 
         // count = 5, average = 607.880000, max = 893.440000, min = 240.580000, sum = 3039.400000
 
-        // TODO: напишіть вміст методу згідно умовам для того, щоб пройти тести
-        return null;
+        return products.stream()
+                .filter(p -> "Books".equals(p.getCategory()))
+                .mapToDouble(Product::getPrice)
+                .summaryStatistics();
     }
 
     public Map<Integer, Integer> getOrdersProductsMap() {
@@ -159,8 +173,11 @@ public class HardTasks {
         // 50 : 2
         // endregion
 
-        // TODO: напишіть вміст методу згідно умовам для того, щоб пройти тести
-        return null;
+        return orders.stream()
+                .collect(java.util.stream.Collectors.toMap(
+                        Order::getId,
+                        o -> o.getProducts().size()
+                ));
     }
 
     public Map<String, List<Integer>> getProductsByCategory() {
@@ -173,8 +190,14 @@ public class HardTasks {
         // Books : [7, 9, 16, 17, 24]
         // endregion
 
-        // TODO: напишіть вміст методу згідно умовам для того, щоб пройти тести
-        return null;
+        return products.stream()
+                .collect(java.util.stream.Collectors.groupingBy(
+                        Product::getCategory,
+                        java.util.stream.Collectors.mapping(
+                                Product::getId,
+                                java.util.stream.Collectors.toList()
+                        )
+                ));
     }
 
 }
